[package]
name = "lp_loadcli_p2_mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
anyhow = "1.0.60"
async-trait = "0.1.56"
rand = "0.8.5"
rand_distr = "0.4.3"
