[package]
name = "mock-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.18.2", features = ["full", "time"] }
