[package]
name = "project-1-author-solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
anyhow = "1.0.60"
async-trait = "0.1.56"

[profile.release]
debug = true