[package]
name = "cli_load_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benchmark = { path = "benchmark" }
clap = { version = "4.1.6", features = ["derive"] }
csv = "1.2.0"
indicatif = "0.17.3"
serde = { version = "1.0.152", features = ["derive"] }
statrs = "0.16.0"
tabled = "0.10.0"
tokio = { version = "1.20", features = ["full"] }

[profile.release]
debug = true
